app/bin/main/styles/AdminScene.css
/* GLOBAL STYLE START */
.backgroundApp {
  -fx-background-color: rgb(71, 0, 71);
}

.header {
  -fx-padding: 15px 0px 3px;
  -fx-spacing: 10px;
}

.header > Label {
  -fx-text-fill: white;
  -fx-font-size: 52px;
  -fx-font-weight: bold;
}

.headerContent {
  -fx-padding: 15px 38px;
  -fx-spacing: 125px;
}

.headerContent > Label {
  -fx-text-fill: white;
  -fx-font-size: 45px;
  -fx-font-weight: bold;
}
/* GLOBAL STYLE END */

/* LOGIN ADMIN SCENE START */
.containerInputs {
  -fx-padding: 10px 120px 20px;
  -fx-spacing: 10px;
}

.containerInputs > Label {
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 24px;
}

.containerInputs > TextField,
.containerInputs > PasswordField {
  -fx-background-color: #7644ff;
  -fx-padding: 10px 20px;
  -fx-text-fill: rgb(252, 252, 252);
  -fx-font-size: 18px;
  -fx-font-weight: bold;
  -fx-border-color: rgb(0, 247, 255);
  -fx-border-width: 2px;
  -fx-border-style: solid;
  -fx-border-radius: 10px;
  -fx-background-radius: 10px;
}

.containerInputs > .loginStatus {
  -fx-font-size: 14px;
  -fx-text-fill: lightgreen;
  -fx-padding: 5px 0px 0px;
}

.containerButtons {
  -fx-padding: 5px 35px;
}

.containerButtons > Button {
  -fx-pref-width: 400px;
  -fx-padding: 10px;
  -fx-background-color: purple;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-weight: bold;
  -fx-font-size: 20px;
  -fx-border-color: rgb(227, 155, 255);
  -fx-border-width: 3px;
  -fx-border-style: dashed;
  -fx-border-radius: 10px;
  -fx-background-radius: 12px;
}

.containerButtons > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(255, 0, 212);
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-style: none;
}

.containerButtons > .backToLoginSceneButton {
  -fx-background-color: rgb(32, 32, 32);
  -fx-border-style: solid;
  -fx-border-color: rgb(255, 238, 0);
}

.containerButtons > .backToLoginSceneButton:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(0, 0, 0);
  -fx-text-fill: rgb(255, 255, 255) !important;
}
/* LOGIN ADMIN SCENE END */

/* NAVBAR START */
.containerNavbar {
  -fx-background-color: rgb(71, 0, 71);
  -fx-pref-height: 600px;
  -fx-spacing: 360px;
}

.containerNavbar > .containerNavbarMenu {
  -fx-spacing: 10px;
}

.containerNavbar > .containerNavbarMenu > Button {
  -fx-pref-width: 180px;
  -fx-padding: 15px 0px;
  -fx-background-color: rgb(71, 0, 71);
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 16px;
}

.containerNavbar > .containerNavbarMenu > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(165, 6, 165);
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-color: rgb(156, 156, 156);
  -fx-border-width: 1px;
}

.containerNavbar > .containerNavbarFooter > Button {
  -fx-pref-width: 180px;
  -fx-padding: 12px 0px;
  -fx-background-color: rgb(197, 14, 14);
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 16px;
}

.containerNavbar > .containerNavbarFooter > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(255, 0, 0);
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-width: 1px;
  -fx-border-color: rgb(209, 171, 0);
}
/* NAVBAR END */

/* HOMEPAGE SCENE START */
.containerContent {
  -fx-pref-width: 580px;
  -fx-padding: 50px 0px;
  -fx-spacing: 54px;
  -fx-background-color: rgb(211, 211, 211);
}

.containerContent > .containerProfile {
  -fx-spacing: 24px;
}

.containerContent > .containerProfile > Label {
  -fx-font-weight: bold;
  -fx-text-fill: rgb(70, 70, 70);
  -fx-font-size: 26px;
}

.containerContent > .containerProfile > .userNameAdmin {
  -fx-font-size: 36px;
}
/* HOMEPAGE SCENE END */

/* BOOK CONTAINER VIEW START */
.containerContentBook {
  -fx-pref-width: 580px;
  -fx-padding: 10px 0px;
  -fx-spacing: 10px;
  -fx-background-color: rgb(228, 228, 228);
}

.containerContentBook > Label {
  -fx-text-fill: rgb(0, 51, 117);
  -fx-font-size: 32px;
  -fx-font-weight: bold;
}

.table-view .column-header {
  -fx-background-color: #2c3e50;
  -fx-border-color: rgb(228, 228, 228);
  -fx-border-width: 1px;
}

.table-view .column-header .label {
  -fx-text-fill: white;
  -fx-font-weight: bold;
}

.table-view .table-row:odd {
  -fx-background-color: #ecf0f1;
}

.table-view .table-row:even {
  -fx-background-color: #dcdde1;
}

.table-view .table-row-cell:hover {
  -fx-background-color: #bdc3c7;
}

.table-view .table-row-cell {
  -fx-font-size: 12px;
}

.table-view .table-cell {
  -fx-table-cell-border-color: transparent;
  -fx-alignment: CENTER;
}
/* BOOK CONTAINER VIEW END */

/* BOOK LIST ADMIN SCENE START */
.tableBook {
  -fx-background-color: white;
  -fx-font-size: 14px;
}

.columnNo {
  -fx-pref-width: 50px;
  -fx-font-size: 11px;
}
.columnJudul {
  -fx-pref-width: 192px;
}
.columnPengarang {
  -fx-pref-width: 140px;
}
.columnPenerbit {
  -fx-pref-width: 100px;
}
.columnTahun {
  -fx-pref-width: 90px;
  -fx-font-size: 11px;
}
/* BOOK LIST ADMIN SCENE END */

/* RETURN BOOK SCENE START */
.tableDataPeminjamanBuku {
  -fx-background-color: white;
  -fx-font-size: 12px;
}

.columnReturnNo {
  -fx-pref-width: 37px;
}
.columnReturnPeminjam {
  -fx-pref-width: 110px;
}
.columnReturnJudul {
  -fx-pref-width: 200px;
}
.columnReturnTP,
.columnReturnTK,
.columnReturnStatus {
  -fx-pref-width: 75px;
}

.containerFooterContent {
  -fx-padding: 10px 0px;
  -fx-spacing: 20px;
}

.containerFooterContent > Label {
  -fx-pref-width: 180px;
  -fx-pref-height: 140px;
  -fx-font-weight: bold;
  -fx-text-fill: rgb(61, 61, 61);
  -fx-font-size: 16px;
  -fx-background-color: rgb(219, 188, 10);
  -fx-padding: 0px 20px;
  -fx-background-radius: 10px;
  -fx-alignment: CENTER;
  -fx-text-alignment: CENTER;
  -fx-wrap-text: true;
}

.containerFooterContent > .returnBookStatusLoading {
  -fx-background-color: rgb(49, 49, 49);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .returnBookStatusFailed {
  -fx-background-color: rgb(185, 10, 10);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .returnBookStatusSuccess {
  -fx-background-color: rgb(41, 182, 6);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .returnBookStatusReturn {
  -fx-background-color: rgb(219, 188, 10);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .containerDataSelection {
  -fx-spacing: 20px;
}

.containerFooterContent > .containerDataSelection > Label {
  -fx-pref-width: 180px;
  -fx-pref-height: 60px;
  -fx-font-weight: bold;
  -fx-text-fill: rgb(61, 61, 61);
  -fx-font-size: 14px;
  -fx-background-color: rgb(212, 183, 13);
  -fx-padding: 6px 10px;
  -fx-background-radius: 10px;
  -fx-alignment: CENTER;
  -fx-text-alignment: CENTER;
  -fx-wrap-text: true;
}

.containerFooterContent > .containerDataSelection > .dataSelectionLoading {
  -fx-background-color: rgb(36, 36, 36);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .containerDataSelection > .dataSelectionFailed {
  -fx-background-color: rgb(206, 10, 10);
  -fx-text-fill: rgb(231, 231, 231);
}

.containerFooterContent > .containerDataSelection > .dataNameSelectionSelected {
  -fx-background-color: rgb(32, 151, 2);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > .containerDataSelection > .dataSelectionReturn {
  -fx-background-color: rgb(230, 195, 1);
  -fx-text-fill: rgb(231, 231, 231);
}

.containerFooterContent > .containerDataSelection > .dataTitleSelectionSelected {
  -fx-background-color: rgb(2, 79, 151);
  -fx-text-fill: rgb(255, 255, 255);
}

.containerFooterContent > Button {
  -fx-padding: 15px 12px;
  -fx-background-color: rgb(50, 194, 14);
  -fx-font-weight: bold;
  -fx-text-fill: rgb(228, 228, 228);
  -fx-font-size: 15px;
  -fx-border-color: gold;
  -fx-border-width: 3px;
  -fx-border-radius: 12px;
  -fx-background-radius: 10px;
  -fx-text-alignment: CENTER;
}

.containerFooterContent > Button:hover {
  -fx-cursor: hand;
  -fx-background-color: rgb(51, 255, 0);
  -fx-text-fill: rgb(255, 255, 255) !important;
  -fx-border-color: rgb(255, 251, 0);
}
/* RETURN BOOK SCENE END */

